Attemp to edit categories in tasks section

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
-image:
+image:  
   file: .gitpod.dockerfile
 tasks:
   - init: . ${GITPOD_REPO_ROOT}/.vscode/init_tasks.sh
@@ -14,3 +14,7 @@ vscode:
     - ms-toolsai.jupyter
     - ms-toolsai.jupyter-keymap
     - ms-toolsai.jupyter-renderers
+    - ms-python.python
+    - ms-python.debugpy
+
+
